# PaperMario2

./: .gitignore  CMakeLists.txt  CppProperties.json  LICENSE.md  README.md  TODO.txt  build.py  get_percent.py  get_source.py
cmake/: CodeWarrior.cmake  FixExtension.cmake  runme.bat
docs/: Effects.md  Scripts.md
include/: countdown.h  dvdmgr.h  error_handler.h  event.h  gxsub.h  item_data.h  main.h  mario.h  mario_party.h  mario_pouch.h  mariost.h  memory.h  nameent.h  parse.h  party.h  pmario_sound.h  romfont.h  seq_title.h  sound.h  statuswindow.h  system.h  texPalette.h
include/DEMO/: DEMOInit.h
include/MusyX/: seq.h
include/battle/: battle.h  battle_ac.h  battle_ac_help.h  battle_acrobat.h  battle_actrecord.h  battle_audience.h  battle_audience_kind_data.h  battle_break_slot.h  battle_camera.h  battle_damage.h  battle_database_common.h  battle_disp.h  battle_event_cmd.h  battle_icon.h  battle_information.h  battle_item_data.h  battle_menu_disp.h  battle_monosiri.h  battle_pad.h  battle_seq.h  battle_seq_command.h  battle_stage.h  battle_stage_object.h  battle_status_effect.h  battle_status_icon.h  battle_sub.h  battle_unit.h  battle_unit_event.h
include/battle/ac/: ac_table.h  ac_timing_a.h
include/battle/sac/: sac_bakugame.h
include/data/: item_data.h  mapdata.h  npc_data.h
include/drv/: animdrv.h  arcdrv.h  bgdrv.h  camdrv.h  casedrv.h  dispdrv.h  effdrv.h  envdrv.h  extdrv.h  fadedrv.h  hitdrv.h  icondrv.h  imgdrv.h  itemdrv.h  lightdrv.h  mapdrv.h  mobjdrv.h  msgdrv.h  npcdrv.h  offscreendrv.h  seqdrv.h  shadowdrv.h  swdrv.h  windowdrv.h
include/eff/: eff_kemuri.h  eff_mahorn2.h  eff_n64.h  eff_nice.h  eff_scanning.h  eff_sleep.h  eff_ultra_hammer.h
include/eff/n64/: eff_expbom_n64.h  eff_kemuri1_n64.h
include/evt/: evt_audience.h  evt_badgeshop.h  evt_bero.h  evt_cmd.h  evt_door.h  evt_eff.h  evt_fade.h  evt_johoya.h  evt_lottery.h  evt_msg.h  evt_npc.h  evt_seq.h  evt_shop.h  evt_snd.h  evt_yuugijou.h
include/evtmgr/: evtmgr.h
include/filemgr/: filemgr.h
include/mario/: mario.h  mario_cam.h  mario_party.h  mario_pouch.h  mario_sbr.h  mariost.h
include/mgr/: arammgr.h  cardmgr.h  dvdmgr.h  evtmgr.h  evtmgr_cmd.h  filemgr.h  fontmgr.h  winmgr.h
include/mot/: mot_plane.h
include/party/: party_vivian.h
include/sdk/: DEMOInit.h  arc.h
include/seq/: seq_e3.h  seq_game.h  seq_logo.h  seq_mapchange.h  seq_title.h
include/win/: win_main.h
linker/: linker.lcf
module/aaa/include/: aaa_00.h
module/aaa/source/: aaa.c  aaa_00.c
module/aji/include/: aji.h  aji_00.h  aji_01.h
module/aji/source/: aji.c  aji_00.c  aji_01.c
source/: countdown.c  database.c  dvdmgr.c  error_handler.c  event.c  gxsub.c  item_data.c  main.c  mario.c  mario_cam.c  mario_party.c  mario_pouch.c  mariost.c  memory.c  nameent.c  parse.c  party.c  pmario_sound.c  romfont.c  seq_title.c  sound.c  statuswindow.c  system.c  texPalette.c
source/MusyX/: seq.c
source/battle/: battle.c  battle_ac.c  battle_ac_help.c  battle_acrobat.c  battle_actrecord.c  battle_audience.c  battle_audience_kind_data.c  battle_break_slot.c  battle_camera.c  battle_damage.c  battle_disp.c  battle_event_cmd.c  battle_icon.c  battle_information.c  battle_item_data.c  battle_menu_disp.c  battle_monosiri.c  battle_pad.c  battle_party.c  battle_seq.c  battle_seq_command.c  battle_stage.c  battle_stage_object.c  battle_status_effect.c  battle_status_icon.c  battle_sub.c  battle_unit.c  battle_unit_event.c  battle_weapon_power.c
source/battle/ac/: ac_table.c  ac_timing_a.c
source/battle/sac/: sac_bakugame.c
source/battle/unit/: unit_party_nokotarou.c
source/data/: item_data.c  mapdata.c  npc_data.c
source/demo/: DEMOInit.c
source/drv/: animdrv.c  arcdrv.c  bgdrv.c  camdrv.c  casedrv.c  dispdrv.c  effdrv.c  envdrv.c  extdrv.c  fadedrv.c  hitdrv.c  icondrv.c  imgdrv.c  itemdrv.c  lightdrv.c  mapdrv.c  mobjdrv.c  msgdrv.c  npcdrv.c  offscreendrv.c  seqdrv.c  shadowdrv.c  swdrv.c  windowdrv.c
source/eff/: eff_kemuri.c  eff_mahorn2.c  eff_n64.c  eff_nice.c  eff_scanning.c  eff_sleep.c  eff_ultra_hammer.c
source/eff/n64/: eff_expbom_n64.c  eff_kemuri1_n64.c
source/evt/: evt_audience.c  evt_badgeshop.c  evt_bero.c  evt_door.c  evt_eff.c  evt_fade.c  evt_johoya.c  evt_lottery.c  evt_msg.c  evt_npc.c  evt_seq.c  evt_shop.c  evt_snd.c  evt_yuugijou.c
source/evtmgr/: evtmgr.c  evtmgr_cmd.c
source/filemgr/: filemgr.c
source/mario/: mario.c  mario_cam.c  mario_party.c  mario_pouch.c  mario_sbr.c  mariost.c
source/mgr/: arammgr.c  cardmgr.c  dvdmgr.c  evtmgr.c  evtmgr_cmd.c  filemgr.c  fontmgr.c  winmgr.c
source/mot/: mot_plane.c
source/party/: party_vivian.c
source/sdk/: DEMOInit.c  arc.c
source/seq/: seq_e3.c  seq_game.c  seq_logo.c  seq_mapchange.c  seq_title.c  seqdef.c
source/win/: win_main.c
